NLP TP/texts/robotics/robotics.stackexchange_0000051904.txt
Q:

Building rosconsole_bridge on OSX fails

Hello,
when trying to build rosconsole_bridge on OSX it fails with this error:
100%] Building CXX object CMakeFiles/rosconsole_bridge.dir/src/bridge.cpp.o
/Users/tatsch/ros_catkin_ws/src/rosconsole_bridge/src/bridge.cpp:52:24: error: 
      no member named 'LOG_INFO' in namespace 'console_bridge'
  case console_bridge::LOG_INFO: 
       ~~~~~~~~~~~~~~~~^
/Users/tatsch/ros_catkin_ws/src/rosconsole_bridge/src/bridge.cpp:61:24: error: 
      no member named 'LOG_WARN' in namespace 'console_bridge'
  case console_bridge::LOG_WARN:
       ~~~~~~~~~~~~~~~~^
/Users/tatsch/ros_catkin_ws/src/rosconsole_bridge/src/bridge.cpp:70:24: error: 
      no member named 'LOG_ERROR' in namespace 'console_bridge'
  case console_bridge::LOG_ERROR:
       ~~~~~~~~~~~~~~~~^
/Users/tatsch/ros_catkin_ws/src/rosconsole_bridge/src/bridge.cpp:98:47: error: 
      no member named 'LOG_DEBUG' in namespace 'console_bridge'
  console_bridge::setLogLevel(console_bridge::LOG_DEBUG);
                              ~~~~~~~~~~~~~~~~^
4 errors generated.

Does anyone already have a solution or a suggestion how to solve this?

Originally posted by J.M.T. on ROS Answers with karma: 266 on 2013-06-11
Post score: 1

Original comments
Comment by William on 2013-06-11:
@Dirk Thomas is this related to the backport to groovy?
Comment by tfoote on 2013-06-12:
This appears to be an issue on all platforms: http://jenkins.willowgarage.com:8080/view/GbinP32/job/ros-groovy-rosconsole-bridge_binarydeb_precise_i386/64/console
Comment by William on 2013-06-12:
@J.M.T. we are working on fixing the issue, if you want to work around it you can use an older version of console_bridge, but it is probably best to just wait for us to release rosconsolse_bridge (it will happen shortly) and then update your version or rosconsolse_bridge when we do.

A:

I just released rosconsole_bridge 0.2.7 into Groovy. That will fix the build issue. Sorry for the inconvenience.

Originally posted by Dirk Thomas with karma: 16276 on 2013-06-12
This answer was ACCEPTED on the original site
Post score: 0

